# app/src/main/java/hu/bme/aut/mobsoft/mobsoftlab/model/RecipeInfo.java
@@ -1,0 +1,89 @@
+package hu.bme.aut.mobsoft.mobsoftlab.model;
+
+public class RecipeInfo   {
+  
+//  @SerializedName("id")
+//  private Long id = null;
+//
+//  @SerializedName("name")
+//  private String name = null;
+//
+//  @SerializedName("description")
+//  private String description = null;
+//
+//
+//
+//  /**
+//   **/
+//  public Long getId() {
+//    return id;
+//  }
+//  public void setId(Long id) {
+//    this.id = id;
+//  }
+//
+//
+//  /**
+//   **/
+//  public String getName() {
+//    return name;
+//  }
+//  public void setName(String name) {
+//    this.name = name;
+//  }
+//
+//
+//  /**
+//   * Recipe description
+//   **/
+//  public String getDescription() {
+//    return description;
+//  }
+//  public void setDescription(String description) {
+//    this.description = description;
+//  }
+//
+//
+//
+//  @Override
+//  public boolean equals(Object o) {
+//    if (this == o) {
+//      return true;
+//    }
+//    if (o == null || getClass() != o.getClass()) {
+//      return false;
+//    }
+//    RecipeInfo recipeInfo = (RecipeInfo) o;
+//    return Objects.equals(id, recipeInfo.id) &&
+//        Objects.equals(name, recipeInfo.name) &&
+//        Objects.equals(description, recipeInfo.description);
+//  }
+//
+//  @Override
+//  public int hashCode() {
+//    return Objects.hash(id, name, description);
+//  }
+//
+//  @Override
+//  public String toString() {
+//    StringBuilder sb = new StringBuilder();
+//    sb.append("class RecipeInfo {\n");
+//
+//    sb.append("    id: ").append(toIndentedString(id)).append("\n");
+//    sb.append("    name: ").append(toIndentedString(name)).append("\n");
+//    sb.append("    description: ").append(toIndentedString(description)).append("\n");
+//    sb.append("}");
+//    return sb.toString();
+//  }
+//
+//  /**
+//   * Convert the given object to string with each line indented by 4 spaces
+//   * (except the first line).
+//   */
+//  private String toIndentedString(Object o) {
+//    if (o == null) {
+//      return "null";
+//    }
+//    return o.toString().replace("\n", "\n    ");
+//  }
+}
