# app/src/main/java/hu/bme/aut/mobsoft/mobsoftlab/swagger.yaml
@@ -97,10 +97,6 @@ paths:
           description: Detailed recipe
         '400':
           description: Invalid status value
-      security:
-        - petstore_auth:
-            - 'write:pets'
-            - 'read:pets'
     delete:
       tags:
         - recipe
@@ -121,22 +117,6 @@ paths:
           description: Invalid ID supplied
         '404':
           description: Pet not found
-      security:
-        - petstore_auth:
-            - 'write:pets'
-            - 'read:pets'
-securityDefinitions:
-  petstore_auth:
-    type: oauth2
-    authorizationUrl: 'http://petstore.swagger.io/oauth/dialog'
-    flow: implicit
-    scopes:
-      'write:pets': modify pets in your account
-      'read:pets': read your pets
-  api_key:
-    type: apiKey
-    name: api_key
-    in: header
 definitions:
   Recipe:
     type: object
@@ -163,17 +143,17 @@ definitions:
         type: integer
       fruitiness:
         type: integer
-  RecipeInfo: null
-  type: object
-  properties:
-    id:
-      type: integer
-      format: int64
-    name:
-      type: string
-    description:
-      type: string
-      description: Recipe description
+  RecipeInfo:
+    type: object
+    properties:
+      id:
+        type: integer
+        format: int64
+      name:
+        type: string
+      description:
+        type: string
+        description: Recipe description
 externalDocs:
   description: Find out more about Swagger
   url: 'http://swagger.io'
